--- a/UmaUmaChecker/UmaUmaChecker.rc
+++ b/UmaUmaChecker/UmaUmaChecker.rc
@@ -66,12 +66,12 @@ BEGIN
     EDITTEXT        IDC_EDITEVENTNAME,58,44,198,14,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "イベント名:",IDC_STATIC,8,47,36,8
     CONTROL         "スタート",IDC_BUTTONSTART,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,7,7,49,14
-    EDITTEXT        IDC_EDIT1,136,74,165,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_EDIT2,136,114,165,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_EDIT3,136,155,165,32,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
     COMBOBOX        IDC_COMBO1,58,28,198,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "設定",IDC_BUTTONCONFIG,192,7,50,14
     PUSHBUTTON      "プレビュー表示",IDC_BUTTONPREVIEW,131,7,54,14
+    CONTROL         "",IDC_EDIT1,"RichEdit20W",ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_BORDER | WS_TABSTOP,136,74,165,34
+    CONTROL         "",IDC_EDIT2,"RichEdit20W",ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_BORDER | WS_TABSTOP,136,114,165,34
+    CONTROL         "",IDC_EDIT3,"RichEdit20W",ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_BORDER | WS_TABSTOP,135,155,165,34
 END
 
 IDD_CONFIG DIALOGEX 0, 0, 309, 194
