[add] ステータス表示用テキストボックス追加
ステータスの数値が色分けされるテキストボックスを追加

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -216,6 +216,7 @@
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="utility.cpp" />
     <ClCompile Include="wxTextPopupCtrl.cpp" />
+    <ClCompile Include="wxUmaTextCtrl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Config.h" />
@@ -230,6 +231,7 @@
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="utility.h" />
     <ClInclude Include="wxTextPopupCtrl.h" />
+    <ClInclude Include="wxUmaTextCtrl.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="UmaUmaChecker.rc" />
