[fix] msbuild.yml修正
構文エラー修正

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -34,7 +34,7 @@ jobs:
       
     - name: Vcpkg
       run: |
-        vcpkg vcpkg integrate install
+        vcpkg integrate install
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
