--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -40,4 +40,10 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}} /p:OutDir="install/"
+    
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: UmaUmaChecker-${{matrix.arch}}
+        path: ${{env.SOLUTION_FILE_PATH}}/install
