--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -14,6 +14,8 @@ env:
   # You can convert this to a build matrix if you need coverage of multiple configuration types.
   # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
   BUILD_CONFIGURATION: Release
+  
+  VCPKG_DEFAULT_TRIPLET: x64-windows-static
 
 permissions:
   contents: read
@@ -32,15 +34,17 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: nuget restore ${{env.SOLUTION_FILE_PATH}}
       
-    - name: Vcpkg
-      run: |
-        vcpkg integrate install
+    - name: run-vcpkg
+      uses: lukka/run-vcpkg@v10.5
+      with:
+        vcpkgJsonGlob: '**/vcpkg.json'
+        appendedCacheKey: vcpkginstall
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}} /p:OutDir="install/"
+      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}} /p:OutDir="${{env.SOLUTION_FILE_PATH}}/install/"
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
