--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -15,8 +15,9 @@ env:
   # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
   BUILD_CONFIGURATION: Release
   
-  VCPKG_DEFAULT_TRIPLET: x64-windows-static
+  BUILD_PLATFORM: x64
   
+  VCPKG_DEFAULT_TRIPLET: x64-windows-static
   VCPKG_INSTALLED_DIR: ./vcpkg_installed/x64-windows-static
 
 permissions:
@@ -49,10 +50,10 @@ jobs:
       # working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}} /p:Platform="${{env.BUILD_PLATFORM}}"
     
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
         name: UmaUmaChecker-${{matrix.arch}}
-        path: ${{env.SOLUTION_FILE_PATH}}/x64/Release
+        path: ${{env.SOLUTION_FILE_PATH}}/${{env.BUILD_PLATFORM}}/${{env.BUILD_CONFIGURATION}}
