[fix] ファイル名修正
ファイル名修正できてなかったので

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -55,5 +55,5 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
-        name: UmaUmaChecker-${{matrix.arch}}
+        name: UmaUmaChecker-${{env.BUILD_PLATFORM}}
         path: ${{env.SOLUTION_FILE_PATH}}/${{env.BUILD_PLATFORM}}/${{env.BUILD_CONFIGURATION}}
