--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="CheckUpdateDialog.h" />
     <ClInclude Include="GrandLiveMusicListFrame.h" />
     <ClInclude Include="object_pool.hpp" />
+    <ClInclude Include="ThemeWrapper.h" />
     <ClInclude Include="UpdateManager.h" />
     <ClInclude Include="wxComboBoxPopup.h" />
     <ClInclude Include="Config.h" />
