[add] テーマ追加
ライトとダークテーマをサポート

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -215,6 +215,11 @@
     <ClCompile Include="AboutDialog.cpp" />
     <ClCompile Include="CheckUpdateDialog.cpp" />
     <ClCompile Include="GrandLiveMusicListFrame.cpp" />
+    <ClCompile Include="ThemeWrapper.cpp" />
+    <ClCompile Include="Theme\BaseRenderer.cpp" />
+    <ClCompile Include="Theme\DarkThemeRenderer.cpp" />
+    <ClCompile Include="Theme\StdRenderer.cpp" />
+    <ClCompile Include="Theme\ThemeManager.cpp" />
     <ClCompile Include="UpdateManager.cpp" />
     <ClCompile Include="wxComboBoxPopup.cpp" />
     <ClCompile Include="Config.cpp" />
@@ -240,6 +245,10 @@
     <ClInclude Include="GrandLiveMusicListFrame.h" />
     <ClInclude Include="object_pool.hpp" />
     <ClInclude Include="ThemeWrapper.h" />
+    <ClInclude Include="Theme\BaseRenderer.h" />
+    <ClInclude Include="Theme\DarkThemeRenderer.h" />
+    <ClInclude Include="Theme\StdRenderer.h" />
+    <ClInclude Include="Theme\ThemeManager.h" />
     <ClInclude Include="UpdateManager.h" />
     <ClInclude Include="wxComboBoxPopup.h" />
     <ClInclude Include="Config.h" />
