--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -81,7 +81,7 @@ jobs:
         vcpkgJsonGlob: '**/UmaUmaChecker/vcpkg.json'
         appendedCacheKey: vcpkginstall
       env:
-        VCPKG_INSTALLED_DIR: ${{ github.workspace }}/vcpkg_installed
+        VCPKG_INSTALLED_DIR: ${{ github.workspace }}\vcpkg_installed
         
     - name: Prints output of run-vcpkg's action.
       run: echo "root='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}', triplet='${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_DEFAULT_TRIPLET_OUT }}' "
